--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "material-ui-popup-state": "^5.0.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-router-dom": "^6.8.1"
+    "react-router-dom": "^6.8.1",
+    "zustand": "^4.3.6"
   },
   "devDependencies": {
     "@types/react": "^18.0.27",
